Sttructure of the webpage created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,128 @@
   <title>Landing Page</title>
 </head>
 <body>
-  
+  <header>
+    <div>
+      <img src="Images/LogoWebPage.png" alt="Web page Logo" width="80px">
+      <h3>Train with Us</h3>
+    </div>
+    <nav>
+      <a href="">Features</a>
+      <a href="">Affiliates</a>
+      <a href="">Pricing</a>
+      <a href="">Communities</a>
+      <button>Join The Family</button>
+    </nav>
+  </header>
+  <main>
+    <div>
+      <p>We are now allowing early-access for users. <a href="">Learn more</a></p>
+      <h1>Join the biggest fitness community with no effort! </h1>
+      <p>
+        <span>Train with us</span> offers the tools you need to start achieving your dream fitness goals
+        with the help of our community with little to no effort. Simply setup your workspace, <span>Train with us</span>
+        will manage everything from diets, to personalize exercises, to content from one central dashboard.
+      </p>
+      <form action="">
+        <input type="">
+        <button type="submit">Join Waitlist</button>
+      </form>
+    </div>
+    <div>
+      <img src="images/pexels-viridiana-o-rivera-14591734.jpg" alt="Woman doing exercise" width="400px">
+    </div>
+    <footer>
+      <p>Here you have our Socials</p>
+      <a href="">Facebook</a>
+      <a href="">Instagram</a>
+      <a href="">LinkedIn</a>
+      <a href="">TikTok</a>
+    </footer>
+  </main>
+  <main>
+    <div>
+      <h2>Follow along with our pre-made routines and diets</h2>
+    </div>
+    <div>
+      <div>
+        <img src="Images/pexels-mart-production-8846108.jpg" alt="Girl doing low exercise" width="250px" >
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Nunc ac tellus convallis, convallis lectus sit amet, 
+          fermentum felis. Donec interdum.
+        </p>
+      </div>
+      <div>
+        <img src="Images/pexels-ricardo-cl-14106028.jpg" alt="Couple stretching" width="250px">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Nunc ac tellus convallis, convallis lectus sit amet, 
+          fermentum felis. Donec interdum.
+        </p>
+      </div>
+      <div>
+        <img src="Images/pexels-ricardo-cl-14106028.jpg" alt="Couple stretching" width="250px">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Nunc ac tellus convallis, convallis lectus sit amet, 
+          fermentum felis. Donec interdum.
+        </p>
+      </div>
+      <div>
+        <img src="Images/pexels-ricardo-cl-14106028.jpg" alt="Couple stretching" width="250px">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Nunc ac tellus convallis, convallis lectus sit amet, 
+          fermentum felis. Donec interdum.
+        </p>
+      </div>
+    </div>
+  </main>
+  <main>
+    <h2>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Etiam accumsan semper tristique. In vel dolor convallis, 
+      consectetur quam ac, fringilla neque. Donec eget dui quis 
+      lorem porta condimentum. Sed porttitor est nec ipsum varius 
+      accumsan. Praesent quam magna, ultrices sit amet ultricies 
+      in, maximus et.
+    </h2>
+    <span>- Marina De Los Palotes.</span>
+  </main>
+  <main>
+    <form action="">
+      <div>
+        <h3>Don't waste more time!</h3>
+        <p>Sign up for Today and you'll get a 70% off your first month.</p>
+      </div>
+      <div>
+        <button>Sign  Up</button>
+      </div>
+    </form>
+  </main>
+  <footer>
+    <div>
+      <span>With Sweat with us</span>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Etiam accumsan semper tristique. In vel dolor convallis, 
+        consectetur quam ac, fringilla neque. Donec eget dui quis 
+        lorem porta condimentum.
+      </p>
+      <span>Made with Love By Yefree De Los Santos Valdez</span>
+    </div>
+    <div>
+      <span>Sitemap</span>
+      <a href="">Homepage</a>
+      <a href="">Pricing</a>
+      <a href="">Testimonials</a>
+    </div>
+    <div>
+      <span>Company</span>
+      <a href="">About</a>
+      <a href="">Customers</a>
+      <a href="">Vlogs</a>
+    </div>
+  </footer>
 </body>
 </html>
