Content organize and quoted

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
 </head>
+<!--Here start the content of the page.-->
 <body>
+  <!--The top of he page.-->
   <header>
     <div>
       <img src="Images/LogoWebPage.png" alt="Web page Logo" width="80px">
@@ -20,6 +22,7 @@
       <button>Join The Family</button>
     </nav>
   </header>
+  <!--First main content of the web page-->
   <main>
     <div>
       <p>We are now allowing early-access for users. <a href="">Learn more</a></p>
@@ -45,6 +48,7 @@
       <a href="">TikTok</a>
     </footer>
   </main>
+  <!--Second main content of the web page.-->
   <main>
     <div>
       <h2>Follow along with our pre-made routines and diets</h2>
@@ -84,6 +88,7 @@
       </div>
     </div>
   </main>
+  <!--3 main content of the page, Testimonials.-->
   <main>
     <h2>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -95,6 +100,7 @@
     </h2>
     <span>- Marina De Los Palotes.</span>
   </main>
+  <!--4 main content, Sign up form.-->
   <main>
     <form action="">
       <div>
@@ -106,6 +112,7 @@
       </div>
     </form>
   </main>
+  <!--End of the page. The Footer.-->
   <footer>
     <div>
       <span>With Sweat with us</span>
