60% Done, Last main div styled

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <a href="#planes">Features</a>
       <a href="#testimonials">Affiliates</a>
-      <a href="">Pricing</a>
+      <a href="#pricing">Pricing</a>
       <a href="">Communities</a>
       <button>Join The Family</button>
     </nav>
@@ -28,14 +28,14 @@
   <!--First main content of the web page-->
   <main class="main-contentContainer">
     <div class="info-mainDiv">
-      <p class="early-p">We are now allowing early-access for users! <a href="">Learn more  &rarr;</a> </p>
+      <p class="early-p">We are now allowing early-access for users! <a href="#pricing">Learn more  &rarr;</a> </p>
       <h1>Join the biggest fitness community with no effort! </h1>
       <p class="descr-p">
         <span>Sweat with us</span> offers the tools you need to start achieving your dream fitness goals
         with the help of our community with little to no effort. Simply setup your workspace, <span>Sweat with us</span>
         will manage everything from diets, to personalize exercises, to content from one central dashboard.
       </p>
-      <form action="">
+      <form action="foo.php">
         <input type="email" placeholder="Your e-mail here">
         <button type="submit">Join Waitlist</button>
       </form>
@@ -102,16 +102,19 @@
     </div>
   </main>
   <!--4 main content, Sign up form.-->
-  <main class="sign-upForm">
+  <main id="pricing" class="sign-upForm">
     <form class="form-signUp" action="">
-      <div>
+      <div class="text-form">
         <h3>Don't waste more time!</h3>
-        <p>Sign up for Today and you'll get a 70% off your first month.</p>
+        <p>Sign up for Today and you'll get a 70% off of your first month.</p>
       </div>
-      <div>
+      <div class="button-container">
         <button>Sign  Up</button>
       </div>
     </form>
+    <div>
+      <img src="Images/pexels-ricardo-cl-14106028.jpg" alt="Smartphone">
+    </div>
   </main>
   <!--End of the page. The Footer.-->
   <footer class="page-endFooter">
