90% Done. Finish the web page main content

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     </div>
     <div class="testi-data">
         <h2>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Etiam accumsan semper tristique. In vel dolor convallis, 
-          consectetur quam ac, fringilla neque. Donec eget dui quis 
-          lorem porta condimentum. Sed porttitor est nec ipsum varius 
-          accumsan. Praesent quam magna, ultrices sit amet ultricies 
-          in, maximus et.
+          "I joined SWEAT WITH ME in 2020 and since then my life changed 
+          in a lot of good ways, the new habits, diet and exercises I've
+          been using in my daily life it's a new form of see myself and the
+          people the world around me. If you're struggling to follow a routine
+          this amazing group of people that I call family will be perfect for you
+          as they have been for me."
         </h2>
       <span>- Marina De Los Palotes.</span>
     </div>
@@ -119,7 +119,7 @@
   <!--End of the page. The Footer.-->
   <footer class="page-endFooter">
     <div>
-      <span>With Sweat with us</span>
+      <span class="column-link-main">With Sweat with us</span>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Etiam accumsan semper tristique. In vel dolor convallis, 
@@ -128,14 +128,14 @@
       </p>
       <span>Made with Love By Yefree De Los Santos Valdez</span>
     </div>
-    <div>
-      <span>Sitemap</span>
+    <div class="link-div">
+      <span class="column-link-main">Sitemap</span>
       <a href="">Homepage</a>
       <a href="">Pricing</a>
       <a href="">Testimonials</a>
     </div>
-    <div>
-      <span>Company</span>
+    <div class="link-div">
+      <span class="column-link-main">Company</span>
       <a href="">About</a>
       <a href="">Customers</a>
       <a href="">Vlogs</a>
