create: install astro framework and dependencies

--- a/index.html
+++ b/index.html
@@ -1,145 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gajraj+One&family=Lato:wght@300;400;700;900&family=Oswald:wght@200;300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="Styles/styles.css">
-  <title>Landing Page</title>
-</head>
-<!--Here start the content of the page.-->
-<body>
-  <!--The top of he page.-->
-  <header class="nav-varHeader">
-    <div class="logo-navDiv">
-      <h3 class="logo-letterNav">Sweat with Us</h3>
-    </div>
-    <nav>
-      <a href="#planes">Features</a>
-      <a href="#testimonials">Affiliates</a>
-      <a href="#pricing">Pricing</a>
-      <a href="">Communities</a>
-      <button>Join The Family</button>
-    </nav>
-  </header>
-  <!--First main content of the web page-->
-  <main class="main-contentContainer">
-    <div class="info-mainDiv">
-      <p class="early-p">We are now allowing early-access for users! <a href="#pricing">Learn more  &rarr;</a> </p>
-      <h1>Join the biggest fitness community with no effort! </h1>
-      <p class="descr-p">
-        <span>Sweat with us</span> offers the tools you need to start achieving your dream fitness goals
-        with the help of our community with little to no effort. Simply setup your workspace, <span>Sweat with us</span>
-        will manage everything from diets, to personalize exercises, to content from one central dashboard.
-      </p>
-      <form action="foo.php">
-        <input type="email" placeholder="Your e-mail here">
-        <button type="submit">Join Waitlist</button>
-      </form>
-    </div>
-    <div class="image-mainDiv">
-      <img src="Images/pexels-alteredsnaps-12890888.jpg" alt="Woman doing exercise">
-    </div>
-  </main>
-  <!--Second main content of the web page.-->
-  <main id="planes" class="second-mainDiv">
-    <div>
-      <h2>Follow along with our pre-made routines and diets</h2>
-    </div>
-    <div class="planesDiv">
-      <div>
-        <img src="Images/pexels-mart-production-8846108.jpg" alt="Girl doing low exercise" >
-        <p>
-          If you're a beginner, We Got You!. Consectetur adipiscing elit.
-          Nunc ac tellus convallis, convallis lectus sit amet, 
-          fermentum felis. Donec interdum.
-        </p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gajraj+One&family=Lato:wght@300;400;700;900&family=Oswald:wght@200;300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Styles/styles.css" />
+    <title>Landing Page</title>
+  </head>
+  <!--Here start the content of the page.-->
+  <body>
+    <!--The top of he page.-->
+    <header class="nav-varHeader">
+      <div class="logo-navDiv">
+        <h3 class="logo-letterNav">Sweat with Us</h3>
       </div>
-      <div>
-        <img src="Images/pexels-elina-fairytale-3823185.jpg" alt="Couple stretching">
-        <p>
-          Do you like Yoga? We got the perfect plans for you.
-          Specialized teachers and Nunc ac tellus convallis, convallis lectus sit amet, 
-          fermentum felis. Donec interdum.
+      <nav>
+        <a href="#planes">Features</a>
+        <a href="#testimonials">Affiliates</a>
+        <a href="#pricing">Pricing</a>
+        <a href="">Communities</a>
+        <button>Join The Family</button>
+      </nav>
+    </header>
+    <!--First main content of the web page-->
+    <main class="main-contentContainer">
+      <div class="info-mainDiv">
+        <p class="early-p">
+          We are now allowing early-access for users!
+          <a href="#pricing">Learn more &rarr;</a>
         </p>
-      </div>
-      <div>
-        <img src="Images/pexels-viridiana-o-rivera-14591734.jpg" alt="Couple stretching">
-        <p>
-          Ready for crush those weights dolor sit amet, elit.
-          The best challenges for you. Nunc ac tellus convallis, 
-          convallis lectus sit amet, fermentum felis. Donec interdum.
+        <h1>Join the biggest fitness community with no effort!</h1>
+        <p class="descr-p">
+          <span>Sweat with us</span> offers the tools you need to start
+          achieving your dream fitness goals with the help of our community with
+          little to no effort. Simply setup your workspace,
+          <span>Sweat with us</span>
+          will manage everything from diets, to personalize exercises, to
+          content from one central dashboard.
         </p>
+        <form action="foo.php">
+          <input type="email" placeholder="Your e-mail here" />
+          <button type="submit">Join Waitlist</button>
+        </form>
       </div>
+      <div class="image-mainDiv">
+        <img
+          src="Images/pexels-alteredsnaps-12890888.jpg"
+          alt="Woman doing exercise"
+        />
+      </div>
+    </main>
+    <!--Second main content of the web page.-->
+    <main id="planes" class="second-mainDiv">
       <div>
-        <img src="Images/pexels-leon-ardho-2468339.jpg" alt="Couple stretching">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Nunc ac tellus convallis, convallis lectus sit amet, 
-          fermentum felis. Donec interdum.
-        </p>
+        <h2>Follow along with our pre-made routines and diets</h2>
       </div>
-    </div>
-  </main>
-  <!--3 main content of the page, Testimonials.-->
-  <main id="testimonials" class="testi-mainDiv">
-    <div class="img-testimoDiv">
-      <img src="Images/pexels-mikhail-nilov-6707081.jpg" alt="Girl of the testimonial doing Yoga.">
-    </div>
-    <div class="testi-data">
+      <div class="planesDiv">
+        <div>
+          <img
+            src="Images/pexels-mart-production-8846108.jpg"
+            alt="Girl doing low exercise"
+          />
+          <p>
+            If you're a beginner, We Got You!. Consectetur adipiscing elit. Nunc
+            ac tellus convallis, convallis lectus sit amet, fermentum felis.
+            Donec interdum.
+          </p>
+        </div>
+        <div>
+          <img
+            src="Images/pexels-elina-fairytale-3823185.jpg"
+            alt="Couple stretching"
+          />
+          <p>
+            Do you like Yoga? We got the perfect plans for you. Specialized
+            teachers and Nunc ac tellus convallis, convallis lectus sit amet,
+            fermentum felis. Donec interdum.
+          </p>
+        </div>
+        <div>
+          <img
+            src="Images/pexels-viridiana-o-rivera-14591734.jpg"
+            alt="Couple stretching"
+          />
+          <p>
+            Ready for crush those weights dolor sit amet, elit. The best
+            challenges for you. Nunc ac tellus convallis, convallis lectus sit
+            amet, fermentum felis. Donec interdum.
+          </p>
+        </div>
+        <div>
+          <img
+            src="Images/pexels-leon-ardho-2468339.jpg"
+            alt="Couple stretching"
+          />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac
+            tellus convallis, convallis lectus sit amet, fermentum felis. Donec
+            interdum.
+          </p>
+        </div>
+      </div>
+    </main>
+    <!--3 main content of the page, Testimonials.-->
+    <main id="testimonials" class="testi-mainDiv">
+      <div class="img-testimoDiv">
+        <img
+          src="Images/pexels-mikhail-nilov-6707081.jpg"
+          alt="Girl of the testimonial doing Yoga."
+        />
+      </div>
+      <div class="testi-data">
         <h2>
-          "I joined SWEAT WITH ME in 2020 and since then my life changed 
-          in a lot of good ways, the new habits, diet and exercises I've
-          been using in my daily life it's a new form of see myself and the
-          people the world around me. If you're struggling to follow a routine
-          this amazing group of people that I call family will be perfect for you
-          as they have been for me."
+          "I joined SWEAT WITH ME in 2020 and since then my life changed in a
+          lot of good ways, the new habits, diet and exercises I've been using
+          in my daily life it's a new form of see myself and the people the
+          world around me. If you're struggling to follow a routine this amazing
+          group of people that I call family will be perfect for you as they
+          have been for me."
         </h2>
-      <span>- Marina De Los Palotes.</span>
-    </div>
-  </main>
-  <!--4 main content, Sign up form.-->
-  <main id="pricing" class="sign-upForm">
-    <form class="form-signUp" action="">
-      <div class="text-form">
-        <h3>Don't waste more time!</h3>
-        <p>Sign up for Today and you'll get a 70% off of your first month.</p>
+        <span>- Marina De Los Palotes.</span>
       </div>
-      <div class="button-container">
-        <button>Sign  Up</button>
+    </main>
+    <!--4 main content, Sign up form.-->
+    <main id="pricing" class="sign-upForm">
+      <form class="form-signUp" action="">
+        <div class="text-form">
+          <h3>Don't waste more time!</h3>
+          <p>Sign up for Today and you'll get a 70% off of your first month.</p>
+        </div>
+        <div class="button-container">
+          <button>Sign Up</button>
+        </div>
+      </form>
+      <div>
+        <img src="Images/pexels-ricardo-cl-14106028.jpg" alt="Smartphone" />
       </div>
-    </form>
-    <div>
-      <img src="Images/pexels-ricardo-cl-14106028.jpg" alt="Smartphone">
-    </div>
-  </main>
-  <!--End of the page. The Footer.-->
-  <footer class="page-endFooter">
-    <div>
-      <span class="column-link-main">With Sweat with us</span>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Etiam accumsan semper tristique. In vel dolor convallis, 
-        consectetur quam ac, fringilla neque. Donec eget dui quis 
-        lorem porta condimentum.
-      </p>
-      <span>Made with Love By Yefree De Los Santos Valdez</span>
-    </div>
-    <div class="link-div">
-      <span class="column-link-main">Sitemap</span>
-      <a href="">Homepage</a>
-      <a href="">Pricing</a>
-      <a href="">Testimonials</a>
-    </div>
-    <div class="link-div">
-      <span class="column-link-main">Company</span>
-      <a href="">About</a>
-      <a href="">Customers</a>
-      <a href="">Vlogs</a>
-    </div>
-  </footer>
-</body>
+    </main>
+    <!--End of the page. The Footer.-->
+    <footer class="page-endFooter">
+      <div>
+        <span class="column-link-main">With Sweat with us</span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+          accumsan semper tristique. In vel dolor convallis, consectetur quam
+          ac, fringilla neque. Donec eget dui quis lorem porta condimentum.
+        </p>
+        <span>Made with Love By Yefree De Los Santos Valdez</span>
+      </div>
+      <div class="link-div">
+        <span class="column-link-main">Sitemap</span>
+        <a href="">Homepage</a>
+        <a href="">Pricing</a>
+        <a href="">Testimonials</a>
+      </div>
+      <div class="link-div">
+        <span class="column-link-main">Company</span>
+        <a href="">About</a>
+        <a href="">Customers</a>
+        <a href="">Blogs</a>
+      </div>
+    </footer>
+  </body>
 </html>
